--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Build
       run: |
         sudo apt-get update
-        sudo apt-get install gcc git wget make libncurses-dev flex bison gperf python python-serial
+        sudo apt-get install gcc git wget make libncurses-dev flex bison gperf python-is-python3
         python -m pip install --user -r ./ESP8266_RTOS_SDK/requirements.txt
         git clone https://github.com/espressif/ESP8266_RTOS_SDK.git
         wget https://dl.espressif.com/dl/xtensa-lx106-elf-gcc8_4_0-esp-2020r3-linux-amd64.tar.gz
