--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,4 +1,4 @@
-name: C/C++ CI
+name: Build
 
 on: [push]
 
@@ -15,7 +15,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install gcc git wget make libncurses-dev flex bison gperf python-is-python3
-        git clone https://github.com/espressif/ESP8266_RTOS_SDK.git
+        git clone --recursive https://github.com/espressif/ESP8266_RTOS_SDK.git
         python -m pip install --user -r ./ESP8266_RTOS_SDK/requirements.txt
         wget https://dl.espressif.com/dl/xtensa-lx106-elf-gcc8_4_0-esp-2020r3-linux-amd64.tar.gz
         tar -xzf xtensa-lx106-elf-gcc8_4_0-esp-2020r3-linux-amd64.tar.gz
@@ -27,4 +27,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Template
-        path: build/
+        path: |
+          build/bootloader/bootloader.*
+          build/partitions_singleapp.*
+          build/template.*
