--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,24 @@ jobs:
       uses: actions/checkout@v3
       with:
           submodules: 'recursive'
-          
-    - name: Build
+        
+    - name: Install packages
       run: |
         sudo apt-get update
         sudo apt-get install gcc git wget make libncurses-dev flex bison gperf python-is-python3
+        
+    - name: Install SDK
+      run : |
         git clone --recursive https://github.com/espressif/ESP8266_RTOS_SDK.git
         python -m pip install --user -r ./ESP8266_RTOS_SDK/requirements.txt
         wget https://dl.espressif.com/dl/xtensa-lx106-elf-gcc8_4_0-esp-2020r3-linux-amd64.tar.gz
         tar -xzf xtensa-lx106-elf-gcc8_4_0-esp-2020r3-linux-amd64.tar.gz
         ./ESP8266_RTOS_SDK/install.sh
         . ./ESP8266_RTOS_SDK/export.sh
-        make
         
+    - name: Build
+      run: make
+  
     - name: Download firmware
       uses: actions/upload-artifact@v3
       with:
