--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,7 @@ jobs:
         sudo apt-get install gcc git wget make libncurses-dev flex bison gperf python-is-python3
         
     - name: Download SDK
-      run : |
-        git clone --recursive https://github.com/espressif/ESP8266_RTOS_SDK.git
+      run : git clone --recursive https://github.com/espressif/ESP8266_RTOS_SDK.git
         
     - name: Restore Cache
       uses: actions/cache/restore@v3
