--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,9 +13,23 @@ jobs:
         
     - name: Install packages
       run: sudo apt-get install gcc git wget make libncurses-dev flex bison gperf python-is-python3
-        
+    
+    - name: Restore SDK Cache
+      uses: actions/cache/restore@v3
+      id: sdk-cache
+      with:
+        path: ESP8266_RTOS_SDK/
+        key: esp8266-rtos-sdk
+    
     - name: Download SDK
+      if: steps.sdk-cache.outputs.cache-hit != 'true'
       run : git clone --recursive https://github.com/espressif/ESP8266_RTOS_SDK.git
+      
+    - name: Save SDK Cache
+      uses: actions/cache/save@v3
+      with:
+        path: ESP8266_RTOS_SDK/
+        key: esp8266-rtos-sdk
         
     - name: Restore Cache
       uses: actions/cache/restore@v3
