--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,30 @@ jobs:
         path: build/
         key: ${{ runner.os }}-build-output
         
-    - name: Build
+    - name: Restore SDK ENV Cache
+      uses: actions/cache/restore@v3
+      id: sdk-env-cache
+      with:
+        path: ~/.espressif/
+        key: ${{ runner.os }}-sdk-env
+        
+    - name: Build with setup env
+      if: steps.sdk-env-cache.outputs.cache-hit != 'true'
       run: |
         ./ESP8266_RTOS_SDK/install.sh
         . ./ESP8266_RTOS_SDK/export.sh
         make
+      
+    - name: Save SDK ENV Cache
+      uses: actions/cache/save@v3
+      if: steps.sdk-env-cache.outputs.cache-hit != 'true'
+      with:
+        path: ~/.espressif/
+        key: ${{ runner.os }}-sdk-env
+        
+    - name: Build
+      if: steps.sdk-env-cache.outputs.cache-hit == 'true'
+      run: make
         
     - name: Save Build Cache
       uses: actions/cache/save@v3
