--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,7 @@ jobs:
       run : git clone --recursive https://github.com/espressif/ESP8266_RTOS_SDK.git
       
     - name: Save SDK Cache
+      if: steps.sdk-cache.outputs.cache-hit != 'true'
       uses: actions/cache/save@v3
       with:
         path: ESP8266_RTOS_SDK/
